# Vigia-

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  README.md  plan-proyecto-ciberseguridad.md  pyproject.toml  railway.json  render.yaml
agents/: __init__.py  _llm.py  antisuplantacion.py  cumplimiento.py  escaneo.py  orquestador.py  priorizacion.py  recon.py  remediacion.py  reporteria.py  revision_ia.py  verificacion.py
api/: README.md  __init__.py  certstream_listener.py  main.py  scheduler.py
auth/: jwt_auth.py
db/: connection.py  schema.sql
docs/: cumplimiento.md  despliegue.md  market-research.md  open-core.md  produccion-readiness.md
eval/: README.md  cumplimiento_fixture_juiceshop.json  docker-compose.yml  dvwa_findings.json  failure_log.md  ground_truth.yaml  ground_truth_dvwa.yaml  ground_truth_webgoat.yaml  known_vulnerabilities.md  live_run_findings.json  live_run_report.md  run_eval.py  sample_findings.json  setup_juiceshop.md  severity_fixture_samples.json
frontend/: index.html  vite.config.ts
legal/: autorizacion-pruebas-seguridad.md
orchestrator/: __init__.py  graph.py  state.py
scripts/: backfill_severidad.py  demo.ps1  seed_demo.py
tests/: conftest.py  test_asset_verification.py  test_auth_flow.py  test_cumplimiento_fallback.py  test_gate_autorizacion.py  test_llm_cli_encoding.py  test_llm_provider_selection.py  test_multi_tenant_isolation.py  test_scan_activo_asset_gate.py  test_severity_normalization.py  test_zap_checkpointed_scan.py  test_zap_timeout_cleanup.py
tools/: README.md  __init__.py  _shared.py  antisuplantacion.py  asset_verification.py  exploit_intel.py  recon.py  report_export.py  requirements.txt  (+2 more)
(+18 files in other folders)
